Add more granular control of community day config
Splits the response text of the !community command so that instead of
specifying "**Squirtle** on Sunday **8th June**" the day, date and
pokemon are all set individually.

Not only does it mean you don't need to piss about with Markdown in the
config file, it gives more flexibility over what we can do with other
stuff too. We can't work with the date if it starts with Squirtle!

--- a/config.example.ini
+++ b/config.example.ini
@@ -15,5 +15,16 @@ nests = 0
 
 
 [events]
-community_day = unknown
 migrations =
+
+
+; Set the text displayed in the !community response.
+;
+; The options are used in the following format:
+;   **<pokemon>** on <day> **<date>**
+;  e.g. **Squirtle** on Sunday **8th June**
+
+[community_day]
+day = an
+date = unknown date
+pokemon = a Pokemon
